--- a/package.json
+++ b/package.json
@@ -6,27 +6,62 @@
     "engines": {
         "vscode": "^1.30.0"
     },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    },
+    "main": "./out/extension.js",
     "categories": [
         "Programming Languages",
         "Snippets"
     ],
     "contributes": {
-        "languages": [{
-            "id": "iec61131",
-            "aliases": ["IEC 61131", "iec61131"],
-            "extensions": [".st",".iec61131",".iec"],
-            "configuration": "./language-configuration.json"
-        }],
+        "languages": [
+            {
+                "id": "iec61131",
+                "aliases": [
+                    "IEC 61131",
+                    "iec61131"
+                ],
+                "extensions": [
+                    ".st",
+                    ".iec61131",
+                    ".iec"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
         "snippets": [
-			{
-				"language": "iec61131",
-				"path": "./snippets.json"
-			}
-		],
-        "grammars": [{
-            "language": "iec61131",
-            "scopeName": "source.iec61131",
-            "path": "./syntaxes/iec61131.tmLanguage.json"
-        }]
-    }
+            {
+                "language": "iec61131",
+                "path": "./snippets.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "iec61131",
+                "scopeName": "source.iec61131",
+                "path": "./syntaxes/iec61131.tmLanguage.json"
+            }
+        ],
+        "commands": [
+            {
+                "command": "extension.helloWorld",
+                "title": "Hello World"
+            }
+        ]
+    },
+    "devDependencies": {
+        "typescript": "^3.1.4",
+        "vscode": "^1.1.25",
+        "tslint": "^5.8.0",
+        "@types/node": "^8.10.25",
+        "@types/mocha": "^2.2.42"
+    },
+    "activationEvents": [
+        "onLanguage:iec61131"
+    ]
 }
